# tdigest-rs

./: .gitignore  Cargo.toml  README.md  profile.json  run.py
examples/: run.py
src/: lib.rs
tdigest_rs/: __init__.py  tdigest.py
tests/: test_ext.py
