[package]
name = "tdigest_rs"
version = "0.1.0"
edition = "2018"

[lib]
name = "tdigest_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37", "anyhow"] }
num-traits = "0.2.17"
numpy = "0.20.0"
anyhow = "1.0.75"

[workspace]

[profile.release]
debug = true
